# Resolution_Transformer_CNN

./: .gitignore  .gitmodules  LICENSE  README.md  args.py  data.py  distillate.py  distillation_sam.py  eval_model_res.py  evaluate.py  extracted.txt  logger.py  losses.py  lr_scheduler.py  measure_training_resources.py  measure_training_time.py  memory_flops.py  model.py  plot_crop_macs.py  plot_cs_vs_res.py  plotplot.py  pyproject.toml  quant_convnets.py  quant_vit.py  requirements.txt  slurm_launcher.py  test_rank.py  test_resnet50_2.py  test_vit.py  testt.py  train_classification.py  train_resnet50.py  train_semantic.py  train_utils.py  train_vit_semantic.py  transforms.py  univit.py  utils.py
configs/: distillate_sam.yaml  test_config.yaml
datasets/: ADE20k.py  Distribution_dataset.py  SAM_dataset.py  SLIP_datasets.py  __init__.py  _optical_flow.py  segment_anything_dataset.py  utils.py  vision.py
datasets/cityscapes/: cityscapes.py
evaluate/: sam_downstream_ade20k.py
models/: __init__.py  densenet.py  inception.py  mobilenetv2.py  mobilenetv3.py  resnet.py  squeezenet.py  swin_transformer.py  vgg.py  vision_transformer.py
models/detection/: faster_rcnn.py  fcos.py  mask_rcnn.py  (+1 more)
project_utils/: adapt_lr.py  distillation.py  temp_downstream.py
references/: common.py
slurm_scripts/: measure_vit_s_training_time.sh  preprocess_script.sh  quant.sh  quant_convnets.sh  test.sh  train_script.sh  univit.sh
training/: data.py  main.py  params.py
utilss/: distillation.py
visualisation/: eval_model_res.py  plot_crop_macs.py  plotplot.py  test_resnet50.py
(+79 files in other folders)
