[project]
name = "Resolution_Transformer_CNN"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "python-hostlist>=2.2.1",
    "simple-slurm>=0.3.5",
    "torch>=2.7.0",
    "torchinfo",
    "torchvision>=0.22.0",
    "wandb>=0.19.10",
]

[tool.uv.sources]
torchinfo = { git = "https://github.com/JeremyMorlier/torchinfo" }

[tool.ruff]
line-length = 120
indent-width = 4

[tool.uv.sources]
stream-dse = { git = "https://github.com/KULeuven-MICAS/stream" }

[lint]
select = [
    # mccabe (C90), commas (COM), comprehensions (C4)
    "C",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # pylint
    "PL",
    # pycodestyle warnings
    "W",
]

# Ignore import violations in all `__init__.py` files.
[lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[lint.isort]
lines-after-imports = 2

[format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"